syntax = "proto2";//指定版本信息，不指定会报错
package buffer; //package声明符
message CGGetDayTaskListProto {
  optional int32 msgType=1 [default = 2210];//协议类型
}